tests/golden/fixtures/syntax-symbolic-subscripts-err-count-nonconstant/expected.err
Error: symbolic subscript field '.string' count expression 'count' must be a constant numeric expression
   ╭─[ tests/golden/fixtures/syntax-symbolic-subscripts-err-count-nonconstant/input.k65:2:13 ]
   │
 2 │     .string[count]:byte
   │             ──┬──  
   │               ╰──── non-constant identifier `count`
   │ 
   │ Help: replace `count` with a literal, an arithmetic expression over literals, or a `const` declaration that resolves to a number at compile time
   │ 
   │ Note: Field counts and offsets are baked into the encoded layout; everything inside `[...]` must reduce to a number during semantic analysis, before any code runs.
───╯
